--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -111,7 +111,7 @@ deny 109.71.252.88;
 deny 109.71.252.97;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 1.170.218.252;
+deny 1.168.174.187;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
@@ -203,7 +203,6 @@ deny 173.237.206.68;
 deny 173.255.198.243;
 deny 176.118.193.33;
 deny 176.58.100.98;
-deny 176.58.121.177;
 deny 176.65.148.133;
 deny 176.65.148.3;
 deny 176.65.149.100;
@@ -243,6 +242,7 @@ deny 179.43.182.232;
 deny 179.43.182.58;
 deny 179.73.191.246;
 deny 180.150.226.99;
+deny 184.168.23.253;
 deny 185.100.85.132;
 deny 185.100.85.24;
 deny 185.100.85.25;
@@ -947,7 +947,6 @@ deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
 deny 217.12.221.131;
-deny 217.154.21.121;
 deny 217.199.199.250;
 deny 23.137.248.100;
 deny 23.137.248.192;
@@ -1031,6 +1030,7 @@ deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::c;
 deny 2602:fef9:100:1100::199;
+deny 2603:3:6109:fa0::;
 deny 2604:2dc0:101:200::53c8;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:b480:3:6::2;
@@ -1240,10 +1240,8 @@ deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
-deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2479:0:6e00::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1343,6 +1341,7 @@ deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:3840:1337:127:0:b9c1:7f4c:1337;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+deny 2a0b:64c0:f802:1::a;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1726,6 +1725,7 @@ deny 45.138.16.42;
 deny 45.138.16.69;
 deny 45.138.16.76;
 deny 45.139.50.202;
+deny 45.139.50.204;
 deny 45.141.215.110;
 deny 45.141.215.111;
 deny 45.141.215.114;
