--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -73,7 +73,6 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
-allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -111,7 +110,7 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.168.174.187;
+allow 1.170.209.223;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -157,6 +156,7 @@ allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.41.95.1;
 allow 154.41.95.2;
+allow 157.66.25.92;
 allow 158.69.252.116;
 allow 160.119.249.240;
 allow 161.129.68.162;
@@ -189,6 +189,7 @@ allow 171.25.193.79;
 allow 171.25.193.80;
 allow 172.104.182.84;
 allow 172.104.186.73;
+allow 172.104.243.155;
 allow 172.104.244.62;
 allow 172.105.174.195;
 allow 172.105.20.12;
@@ -203,6 +204,7 @@ allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.58.100.98;
+allow 176.58.121.177;
 allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
@@ -242,7 +244,6 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.73.191.246;
 allow 180.150.226.99;
-allow 184.168.23.253;
 allow 185.100.85.132;
 allow 185.100.85.24;
 allow 185.100.85.25;
@@ -1030,7 +1031,6 @@ allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
-allow 2603:3:6109:fa0::;
 allow 2604:2dc0:101:200::53c8;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:b480:3:6::2;
@@ -1059,7 +1059,6 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
-allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1114,7 +1113,6 @@ allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
-allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2620:7:6001::101;
@@ -1240,6 +1238,7 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
@@ -1681,6 +1680,7 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.42.177.222;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1698,7 +1698,6 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
